Changed Profile pic
1) Added new pic
2) Updated HTML to use new pic
3) Updated CSS
4) Removed fish_pic

--- a/vasylevska_cv/CVHtml.html
+++ b/vasylevska_cv/CVHtml.html
@@ -10,7 +10,7 @@
     <table class="table_class">
         <tr>
             <td colspan="2"stype="text-align: right">
-                <img src="FIsh_Profile_Picture.jfif" alt="CV Picture" class="cv_picture">
+                <img src="Profile_Pic.jfif" alt="CV Picture" class="cv_picture">
                 <h1>VASYLEVSKA OLEKSANDRA</h1>
                 <h3>QA Engineer (Intern/Junior)</h3>
                 <p><strong>Age:</strong> 22</p>
